--- a/EC2Demo.yaml
+++ b/EC2Demo.yaml
@@ -67,4 +67,4 @@ Outputs:
   PublicIP:
     Description: Public IP address of the newly created EC2 instance
     Value: !GetAtt [EC2Instance, PublicIp]
-    Description:
+    Description: Added to new branch
